--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 /*-------------------------------------------------------------*/
 /*                      My Styles                              */
 /*-------------------------------------------------------------*/
 
-.my-container {
+/*.my-container {
     border: 2px solid black;
 }
 
@@ -12,7 +14,7 @@
 
 .my-col {
     border: 2px solid blue;
-}
+}*/
 
 /*-------------------------------------------------------------*/
 /*                     Global styles                           */
@@ -24,6 +26,13 @@ body {
 
 .vertical-center {
     text-align: center;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: #000;
 }
 
 /*-------------------------------------------------------------*/
@@ -80,6 +89,12 @@ header {
 /*-------------------------------------------------------------*/
 /*                        Game Area                            */
 /*-------------------------------------------------------------*/
+
+button {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 52px;
+}
 
 #game-area-container {
     margin-top: 20px;
@@ -191,18 +206,30 @@ header {
     width: 250px;
     height: 125px;
 
-    border: 3px solid black;
+    border: 3px solid rgb(174, 168, 168);
     border-radius: 50px;
 
-    background-color: #e0a224;
+    background-color: #000;
 
     margin-top: 35%;
     margin-left: 20%;
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    color: rgb(174, 168, 168);
+}
+
+.mode-btn:hover {
+    border: 3px solid #000;
+
+    background-color: #e0a224;
+    color: #000;
 }
 
 @media screen and (max-width: 1300px) {
     .mode-btn {
         margin-left: 10%;
+        font-size: 48px;
     }
 }
 
@@ -210,6 +237,7 @@ header {
     .mode-btn {
         width: 150px;
         height: 75px;
+        font-size: 32px;
     }
 }
 
@@ -223,6 +251,7 @@ header {
     .mode-btn {
         width: 100px;
         height: 50px;
+        font-size: 18px;
     }
 }
 
@@ -235,6 +264,7 @@ header {
 }
 
 .score-tag {
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 46px;
 
@@ -253,6 +283,7 @@ header {
     background-color: #fff;
 
     line-height: 80px;
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 56px;
     color: black;
