--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ button {
 
     position: relative;
     right: 26%;
-    z-index: 1000;
+    z-index: 500;
     float: right;
     top: -158%;
 }
@@ -332,4 +332,30 @@ footer {
     height: 100px;
 
     background-color: #e0a224;
+}
+
+/*-------------------------------------------------------------*/
+/*                        Animations                           */
+/*-------------------------------------------------------------*/
+
+#blink-start {
+    background-color: rgb(76, 175, 214);
+
+    display: inline-block;
+    border: 3px solid #fff;
+    border-radius: 50%;
+
+    position: relative;
+    height: 50px;
+    width: 50px;
+    right: -43.7%;
+    z-index: 600;
+    top: -120.5%;
+}
+
+@media screen and (max-width: 600px) {
+    #blink-start {
+        right: -1.3%;
+        top: -140%;
+    }
 }
