--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 /*                      My Styles                              */
 /*-------------------------------------------------------------*/
 
-/*
+
 .my-container {
     border: 2px solid black;
 }
@@ -16,7 +16,6 @@
 .my-col {
     border: 2px solid blue;
 }
-*/
 
 /*-------------------------------------------------------------*/
 /*                     Global styles                           */
@@ -80,7 +79,7 @@ p {
     border-radius: 50%;
 
     position: relative;
-    right: 35.5%;
+    right: 0%;
     z-index: 500;
     float: right;
     top: 252px;
@@ -96,8 +95,10 @@ p {
 .color-btn {
     position: relative;
     z-index: 400;
-    right: -7%;
-    top: -40px;;
+    float: right;
+    right: 0%;
+    top: -40px;
+    ;
 }
 
 #red-button {
@@ -169,14 +170,6 @@ button {
         border-width: 5px 10px 10px 5px;
         border-bottom-right-radius: 175px;
     }
-
-    #start-button {
-        width: 140px;
-        height: 140px;
-
-        top: -173%;
-        right: 28%;
-    }
 }
 
 /*------------------- Mode buttons --------------------*/
@@ -195,7 +188,6 @@ button {
 
     background-color: #000;
 
-    margin: auto;
     margin-top: 35px;
 
     font-family: 'Roboto', sans-serif;
@@ -292,5 +284,15 @@ button {
     #blink-start {
         right: -1.3%;
         top: -140%;
+    }
+}
+
+/*-------------------------------------------------------------*/
+/*             Screen width below 1295px                       */
+/*-------------------------------------------------------------*/
+
+@media screen and (max-width: 1295px) {
+
+    #start-button {
     }
 }
