--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,13 @@ body {
 }
 
 #main-container {
-    margin-top: 7px;
+    min-width: 95%;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
 }
 
 .vertical-center {
@@ -49,7 +55,7 @@ p {
 
 #main-modes {
     background-color: orange;
-    height: 250px;
+    height: 225px;
 
     border: 15px solid #000;
     border-top-left-radius: 500px;
@@ -296,23 +302,23 @@ p {
 
     .startButton {
         background-color: green;
-    
+
         width: 95px;
         height: 95px;
         border-width: 15px;
-    
+
         right: 0%;
         top: 57px;
-    
+
         font-weight: 500;
         font-size: 36px;
     }
-    
+
     .color-area {
         max-width: 175px;
         height: 175px;
     }
-    
+
     .small-color-btn {
         position: relative;
         z-index: 400;
@@ -320,22 +326,22 @@ p {
         right: 0%;
         top: -175px;
     }
-    
+
     .redButton {
         border-width: 15px 10px 10px 15px;
         border-top-left-radius: 175px;
     }
-    
+
     .blueButton {
         border-width: 15px 15px 10px 10px;
         border-top-right-radius: 175px;
     }
-    
+
     .greenButton {
         border-width: 10px 10px 15px 15px;
         border-bottom-left-radius: 175px;
     }
-    
+
     .yellowButton {
         border-width: 10px 15px 15px 10px;
         border-bottom-right-radius: 175px;
@@ -429,45 +435,45 @@ p {
     #small-turorial-icon {
         font-size: 150px;
         color: rgb(174, 168, 168);
-    
+
         background-color: #000;
-    
+
         border: 5px solid rgb(174, 168, 168);
         border-radius: 50%;
-    
+
         margin-top: 0px;
     }
-    
+
     #small-turorial-icon:hover {
         border: 5px solid #000;
-    
+
         background-color: #fff;
         color: #000;
     }
-    
+
     #small-mode-button {
         width: 250px;
         height: 125px;
-    
+
         border: 5px solid rgb(174, 168, 168);
         border-radius: 50px;
-    
+
         background-color: #000;
-    
+
         font-family: 'Roboto', sans-serif;
         font-weight: 500;
         font-size: 52px;
         color: rgb(174, 168, 168);
     }
-    
+
     #small-mode-button:hover {
         border: 5px solid #000;
         border-radius: 50px;
-    
+
         background-color: #fff;
         color: #000;
     }
-    
+
     #small-high-score-button {
         width: 90px;
         height: 45px;
@@ -477,47 +483,47 @@ p {
 
     .startButton {
         background-color: green;
-    
+
         width: 75px;
         height: 75px;
         border-width: 8px;
-    
+
         right: 0%;
-        top: 55px;
-    
+        top: 72px;
+
         font-weight: 500;
         font-size: 36px;
     }
-    
+
     .color-area {
         max-width: 125px;
         height: 125px;
     }
-    
+
     .small-color-btn {
         position: relative;
         z-index: 400;
         float: right;
         right: 0%;
-        top: -120px;
+        top: -100px;
         ;
     }
-    
+
     .redButton {
         border-width: 10px 5px 5px 10px;
         border-top-left-radius: 125px;
     }
-    
+
     .blueButton {
         border-width: 10px 10px 5px 5px;
         border-top-right-radius: 125px;
     }
-    
+
     .greenButton {
         border-width: 5px 5px 10px 10px;
         border-bottom-left-radius: 125px;
     }
-    
+
     .yellowButton {
         border-width: 5px 10px 10px 5px;
         border-bottom-right-radius: 125px;
