--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ p {
 /*-------------------------------------------------------------*/
 
 .startButton {
-    background-color: green;
+    background-color: orange;
 
     width: 150px;
     height: 150px;
@@ -104,7 +104,7 @@ p {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 52px;
-    color: green;
+    color: orange;
 }
 
 .color-area {
@@ -301,7 +301,7 @@ p {
     }
 
     .startButton {
-        background-color: green;
+        background-color: orange;
 
         width: 95px;
         height: 95px;
@@ -482,7 +482,7 @@ p {
     }
 
     .startButton {
-        background-color: green;
+        background-color: orange;
 
         width: 75px;
         height: 75px;
@@ -528,4 +528,54 @@ p {
         border-width: 5px 10px 10px 5px;
         border-bottom-right-radius: 125px;
     }
+}
+
+/* Tutorial */
+
+.modal-content {
+    background-color: rgb(36, 31, 31);
+    border: 5px solid black;
+    border-radius: 5px;
+    color: rgb(218, 209, 209);
+}
+
+.btn-close {
+    background-color: rgb(218, 209, 209);
+}
+
+#tutorial-explanations {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    line-height: 35px;
+}
+
+.explanation-icons {
+    font-size: 22px;
+}
+
+.tutorial-btns {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    color: rgb(174, 168, 168);
+
+    height: 25px;
+    width: 75px;
+    background-color: #000;
+
+    border: 2px solid rgb(174, 168, 168);
+    border-radius: 35px;
+
+    line-height: 2px;
+}
+
+.tutorial-start {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    border: 3px solid #000;
+    background-color: orange;
+}
+
+.model-buttons {
+    margin-top: 15px;
 }
