Add highscore bord for classis mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,13 @@ p {
     color: #000;
 }
 
+th {
+    color: rgb(174, 168, 168);
+}
 
+td {
+    color: rgb(174, 168, 168);
+}
 
 /*-------------------------------------------------------------*/
 /*                  Reset and tutorial area                    */
