Add feedback icon and feed back function, to get email from users

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,12 @@ td {
     border-bottom-right-radius: 500px;
 }
 
+#feedback-button {
+    position: relative;
+    right: -25%;
+    bottom: 20px;
+}
+
 /*-------------------------------------------------------------*/
 /*                        Animations                           */
 /*-------------------------------------------------------------*/
