--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,13 +27,19 @@ body {
 }
 
 #main-container {
-    min-width: 95%;
+    max-width: 1200px;
 
     position: fixed;
     top: 50%;
     left: 50%;
     /* bring your own prefixes */
     transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 1200px) {
+    #main-container {
+        min-width: 95%;
+    }
 }
 
 .vertical-center {
