Fix bug where last name on high score board would not save

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ td {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 52px;
-    color: orange;
+    color: black;
 }
 
 .color-area {
