--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,7 +587,11 @@ td {
     width: 25px;
     border-radius: 50%;
     border: 3px solid #000;
-    background-color: orange;
+    background-color: rgb(135, 206, 22);
+}
+
+.hs {
+    font-size: 12px;
 }
 
 .model-buttons {
