Add more commets to the code. Removed unesasery code and commented code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-/*-------------------------------------------------------------*/
-/*                      My Styles                              */
-/*-------------------------------------------------------------*/
 
-/*
-.my-container {
-    border: 2px solid black;
-}
-
-.my-row {
-    border: 2px solid red;
-}
-
-.my-col {
-    border: 2px solid blue;
-}
-*/
-
-/*-------------------------------------------------------------*/
-/*                     Global styles                           */
-/*-------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------------------------*/
+/*                     Global styles                                                                                   */
+/*---------------------------------------------------------------------------------------------------------------------*/
 
 body {
-    background-color: #fff;
+    background-color: rgb(172, 172, 172);
 }
 
 #main-container {
@@ -32,7 +15,6 @@ body {
     position: fixed;
     top: 50%;
     left: 50%;
-    /* bring your own prefixes */
     transform: translate(-50%, -50%);
 }
 
@@ -61,9 +43,9 @@ td {
     color: rgb(174, 168, 168);
 }
 
-/*-------------------------------------------------------------*/
-/*                  Reset and tutorial area                    */
-/*-------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------------------------*/
+/*                     Reset and tutorial area                                                                         */
+/*---------------------------------------------------------------------------------------------------------------------*/
 
 #main-modes {
     background-color: orange;
@@ -97,9 +79,9 @@ td {
     right: 40%;
 }
 
-/*-------------------------------------------------------------*/
-/*                        Game Area                            */
-/*-------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------------------------*/
+/*                     Game Area                                                                                       */
+/*---------------------------------------------------------------------------------------------------------------------*/
 
 .startButton {
     background-color: rgb(135, 206, 22);
@@ -171,7 +153,7 @@ td {
     background-color: #979908;
 }
 
-/*------------------- Mode and highscore buttons --------------------*/
+/*------------------- Mode and highscore buttons ----------------------------------------------------------------------*/
 
 .button-are {
     background-color: #000;
@@ -212,9 +194,9 @@ td {
     font-size: 40px;
 }
 
-/*-------------------------------------------------------------*/
-/*                        Footer                               */
-/*-------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------------------------*/
+/*                    Footer                                                                                           */
+/*---------------------------------------------------------------------------------------------------------------------*/
 
 #footer {
     background-color: orange;
@@ -241,10 +223,11 @@ td {
     margin-top: 10px;
 }
 
-/*-------------------------------------------------------------*/
-/*                    Small screens                            */
-/*-------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------------------------*/
+/*                    Small screens                                                                                    */
+/*---------------------------------------------------------------------------------------------------------------------*/
 
+/*------------------ Buttons for modes and high score -----------------------------------------------------------------*/
 @media screen and (max-width: 1055px) {
 
     .btns {
@@ -268,6 +251,7 @@ td {
     }
 }
 
+/*------------------ Game area -----------------------------------------------------------------------------------------*/
 @media screen and (max-width: 992px) {
     .startButton {
         width: 100px;
@@ -308,6 +292,7 @@ td {
     }
 }
 
+/*------------------ Game area -----------------------------------------------------------------------------------------*/
 @media screen and (max-width: 900px) {
 
     .show-big-screen {
@@ -361,12 +346,17 @@ td {
     }
 }
 
+/*------------------ Style to show only on small screens -------------------------------------------------------------*/
 @media screen and (min-width: 899.98px) {
 
     .show-small-screen {
         display: none;
     }
 }
+
+/*---------------------------------------------------------------------------------------------------------------------*/
+/*                    Seperet elements for small screens                                                               */
+/*---------------------------------------------------------------------------------------------------------------------*/
 
 #bar-button {
     border: none;
@@ -544,7 +534,9 @@ td {
     }
 }
 
-/* Tutorial */
+/*---------------------------------------------------------------------------------------------------------------------*/
+/*                   Tutorial styles                                                                                   */
+/*---------------------------------------------------------------------------------------------------------------------*/
 
 .modal-content {
     background-color: rgb(36, 31, 31);
